crates/observed_macros/src/snapshots/observed_macros__enrichment__tests__enrichment_with_lifetime.snap
---
source: crates/observed_macros/src/enrichment.rs
expression: output
---
const _: () = {
    impl<'a> ::observed::enrichment::Enrichment for BorrowedCtx<'a> {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(1usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                        "label",
                        self.label,
                    ),
                );
            entries
        }
    }
};
