crates/observed_macros/src/snapshots/observed_macros__enrichment__tests__enrichment_with_rename.snap
---
source: crates/observed_macros/src/enrichment.rs
expression: output
---
const _: () = {
    impl ::observed::enrichment::Enrichment for RequestContext {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(2usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::new(
                        "http.method",
                        self.method,
                    ),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                        "status",
                        self.status,
                    ),
                );
            entries
        }
    }
};
